# CUDA-inference-engine-with-PTX-finetuning

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_tuned.bat  dump_ptx.bat  dump_real_ptx.bat
bench/: baseline.txt  ncu_naive.csv  results.md
build_ptx/: qkv_proj.cpp1.ii  qkv_proj.cpp1.ii.res  qkv_proj.cpp4.ii  qkv_proj.cpp4.ii.res  qkv_proj.cudafe1.c  qkv_proj.cudafe1.cpp  qkv_proj.cudafe1.gpu  qkv_proj.cudafe1.stub.c  qkv_proj.module_id
build_tuned/: .ninja_deps  .ninja_log  CMakeCache.txt  bench_qkv.exp  bench_qkv.lib  build.ninja  cmake_install.cmake  inference.exp  inference.lib
include/: config.hpp  kernels.hpp  model.hpp  tensor.hpp  weights.hpp
scripts/: baseline_benchmark.py  dump_reference.py  export_weights.py  run.py
src/: bench_qkv.cu  main.cpp  model.cu  weights.cpp
src/kernels/: attention.cu  matmul_int8.cu  qkv_proj.cu  rmsnorm.cu  rope.cu  sampling.cu  swiglu.cu
